# BeggarBot

./: .gitignore  .gitmodules  BeggarBot.kdev4  CMakeLists.txt  Makefile  README.md  beggar_bot.kdev4  constants.h  dependencies.txt  download_model.bash  main.cpp  ncs_test.cpp  package.xml  robot.launch  test.cpp
.kdev4/: BeggarBot.kdev4  beggar_bot.kdev4
include/: constants.h
msg/: DetectionBox.msg  DetectionList.msg
ncs_wrapper/: ncs_wrapper.cpp  ncs_wrapper.hpp
src/: camera.cpp  robot.cpp  sensor.cpp  servo.cpp  switch.cpp
srv/: ServoAction.srv  ServoHeadPlatform.srv  ServoSpeed.srv
