<?xml version="1.0"?>
<package format="2">
  <name>beggar_bot</name>
  <version>0.1.0</version>
  <description>Beggar Bor fun project</description>

  <maintainer email="dmitribeloborodov@yandex.ru">Dmitrii Beloborodov</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/BeloborodovDS/BeggarBot</url>
  <author email="dmitribeloborodov@yandex.ru">Dmitrii Beloborodov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>genmsg</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
